[package]
name = "ModderCli"
edition = "2021"
version = "0.0.1"
author = "Metty" 
about = "A simple modding tool to manage mod files so I don't go insane working on them."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
